--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>Parent</groupId>
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>1.5.12.RELEASE</version>
+  </parent>
+  <groupId>springboot</groupId>
   <artifactId>Parent</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <!--<modules>-->
-    <!--<module>scdProvider</module>-->
-    <!--<module>scdConsumer</module>-->
-    <!--<module>register</module>-->
-  <!--</modules>-->
+  <modules>
+    <module>scdProvider</module>
+    <module>scdConsumer</module>
+    <module>register</module>
+  </modules>
   <packaging>pom</packaging>
   <name>Parent Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
@@ -32,6 +37,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <spring-cloud.version>Edgware.SR3</spring-cloud.version>
   </properties>
   <dependencies>
     <dependency>
@@ -41,17 +47,17 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <!--<dependencyManagement>-->
-    <!--<dependencies>-->
-      <!--<dependency>-->
-        <!--<groupId>org.springframework.cloud</groupId>-->
-        <!--<artifactId>spring-cloud-dependencies</artifactId>-->
-        <!--<version>Brixton.RELEASE</version>-->
-        <!--<type>pom</type>-->
-        <!--<scope>import</scope>-->
-      <!--</dependency>-->
-    <!--</dependencies>-->
-  <!--</dependencyManagement>-->
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
   <build>
     <finalName>Parent</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
