--- a/scdProvider/src/main/resources/application.properties
+++ b/scdProvider/src/main/resources/application.properties
@@ -1,25 +1,25 @@
 server.port=8082
 ##数据库
-#spring.datasource.url=jdbc:mysql://localhost:3306/train?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-##redis
-#spring.redis.database=0
-#spring.redis.host=localhost
-#spring.redis.port=6379
-#spring.redis.password=
-#spring.redis.timeout=100000
-#spring.redis.jedis.pool.max-active=8
-#spring.redis.jedis.pool.max-wait=-1
-#spring.redis.jedis.pool.min-idle=0
-#spring.redis.jedis.pool.max-idle=8
+spring.datasource.url=jdbc:mysql://localhost:3306/train?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#redis
+spring.redis.database=0
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.timeout=100000
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-wait=-1
+spring.redis.jedis.pool.min-idle=0
+spring.redis.jedis.pool.max-idle=8
 ##页面
 spring.thymeleaf.prefix=classpath:/templates/
 spring.mvc.view.suffix=.html
 ##mybatis
-#mybatis.mapper-locations=classpath:mapper/*.xml
-#mybatis.type-aliases-package=com.example.demo.entity
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.provider.demo.entity
 ##springcloud
 #服务名
 spring.application.name=ticket-provider
