--- a/scdConsumer/src/main/resources/application.properties
+++ b/scdConsumer/src/main/resources/application.properties
@@ -1,28 +1,32 @@
 server.port=8083
 ##数据库
-#spring.datasource.url=jdbc:mysql://localhost:3306/train?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-##redis
-#spring.redis.database=0
-#spring.redis.host=localhost
-#spring.redis.port=6379
-#spring.redis.password=
-#spring.redis.timeout=100000
-#spring.redis.jedis.pool.max-active=8
-#spring.redis.jedis.pool.max-wait=-1
-#spring.redis.jedis.pool.min-idle=0
-#spring.redis.jedis.pool.max-idle=8
+spring.datasource.url=jdbc:mysql://localhost:3306/train?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#redis
+spring.redis.database=0
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.timeout=100000
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-wait=-1
+spring.redis.jedis.pool.min-idle=0
+spring.redis.jedis.pool.max-idle=8
 ##页面
 spring.thymeleaf.prefix=classpath:/templates/
 spring.mvc.view.suffix=.html
 ##mybatis
-#mybatis.mapper-locations=classpath:mapper/*.xml
-#mybatis.type-aliases-package=com.example.demo.entity
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.consumer.demo.entity
 ##springcloud
-
 spring.application.name=ticket-customer
 eureka.instance.prefer-ip-address=true
 #注册地址
 eureka.client.service-url.defaultZone=http://localhost:8088/eureka/
+##rabbitmq相关配置
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
