--- a/scdProvider/src/main/resources/application.properties
+++ b/scdProvider/src/main/resources/application.properties
@@ -27,3 +27,10 @@ spring.application.name=ticket-provider
 eureka.instance.prefer-ip-address=true
 #注册地址
 eureka.client.service-url.defaultZone=http://localhost:8088/eureka/
+##springboot监控管理##
+management.security.enabled = false
+##rabbitmq相关配置
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
