--- a/scdProvider/src/main/resources/application.properties
+++ b/scdProvider/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8082
-##数据库
+##数据库##
 spring.datasource.url=jdbc:mysql://localhost:3306/train?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#redis
+##redis##
 spring.redis.database=0
 spring.redis.host=localhost
 spring.redis.port=6379
@@ -14,10 +14,10 @@ spring.redis.jedis.pool.max-active=8
 spring.redis.jedis.pool.max-wait=-1
 spring.redis.jedis.pool.min-idle=0
 spring.redis.jedis.pool.max-idle=8
-##页面
+##页面##
 spring.thymeleaf.prefix=classpath:/templates/
 spring.mvc.view.suffix=.html
-##mybatis
+##mybatis##
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.provider.demo.entity
 ##springcloud
@@ -34,3 +34,19 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+######################################################
+###spring data JPA配置###
+######################################################
+#指定JPA的DB
+spring.jpa.database=MYSQL
+#是否显示SQL
+spring.jpa.show-sql=true
+#执行DDL语句时，是创建create，创建删除create-drop，更新update
+spring.jpa.hibernate.ddl-auto=update
+#命名策略：当创建了entity，会在DB中创建一个表结构
+#这个是驼峰命名法，遇到大写加下划线
+#spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+#这个是默认写法，以属性名命名
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#hibernate配置DB方言
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
