--- a/scdProvider/src/main/resources/application.properties
+++ b/scdProvider/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 server.port=8082
-##数据库##
+######################################################
+                    ##数据库##
+######################################################
 spring.datasource.url=jdbc:mysql://localhost:3306/train?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-##redis##
+######################################################
+                    ##redis##
+######################################################
 spring.redis.database=0
 spring.redis.host=localhost
 spring.redis.port=6379
@@ -20,22 +24,26 @@ spring.mvc.view.suffix=.html
 ##mybatis##
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.provider.demo.entity
-##springcloud
+######################################################
+                ##springcloud##
+######################################################
 #服务名
 spring.application.name=ticket-provider
 #使用ip进行注册
 eureka.instance.prefer-ip-address=true
 #注册地址
 eureka.client.service-url.defaultZone=http://localhost:8088/eureka/
-##springboot监控管理##
+#springboot监控管理
 management.security.enabled = false
-##rabbitmq相关配置
+######################################################
+                ##rabbitmq相关配置##
+######################################################
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 ######################################################
-###spring data JPA配置###
+            ###spring data JPA配置###
 ######################################################
 #指定JPA的DB
 spring.jpa.database=MYSQL
